sophons/apps/gitea/statefulset.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/statefulset-apps-v1.json
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: act-runner
    app.kubernetes.io/part-of: gitea
  name: act-runner
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: act-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: act-runner
        app.kubernetes.io/part-of: gitea
    spec:
      restartPolicy: Always

      volumes:
        - name: runner-data
          emptyDir:
            sizeLimit: 10Gi
        - name: runner-config
          configMap:
            name: gitea-runner

      securityContext:
        fsGroup: 1000

      resources:
        requests:
          cpu: 250m
          memory: 256Mi
        limits:
          memory: 2Gi

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - sophons-prime
                      - sophons-oduduwa
                      - sophons-kaos
                      - sophons-caeneus
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: act-runner
                  app.kubernetes.io/part-of: gitea
              mismatchLabelKeys: [pod-template-hash]
              topologyKey: kubernetes.io/hostname

      containers:
        - name: runner
          image: gitea/act_runner:nightly
          imagePullPolicy: Always
          # command:
          #   - sh
          #   - -c
          #   - |
          #     while ! nc -z localhost 2376 </dev/null; do
          #       echo 'waiting for docker daemon...'
          #       sleep 1
          #     done
          #     /sbin/tini -- run.sh
          volumeMounts:
            - name: runner-data
              mountPath: /tmp
              subPath: runner-tmp
            - name: runner-data
              mountPath: /data
              subPath: runner-data
            - name: runner-data
              mountPath: /.cache
              subPath: runner-cache
            - name: runner-data
              mountPath: /var/run
              subPath: docker-run
            - name: runner-config
              mountPath: /config
              readOnly: true
            - name: runner-data
              mountPath: /certs
              subPath: docker-certs/client
              readOnly: true
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
        - name: daemon
          image: docker:29.0.1-dind-rootless
          args: ["--mtu=1420"]
          securityContext:
            privileged: true # required still for dind-rootless
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: runner-data
              mountPath: /tmp
              subPath: docker-tmp
            - name: runner-data
              mountPath: /certs
              subPath: docker-certs
            - name: runner-data
              mountPath: /var/lib/docker
              subPath: docker-data
            - name: runner-data
              mountPath: /var/run
              subPath: docker-run
