sophons/apps/gitea/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: ssh

  rules:
    - backendRefs:
        - name: gitea-ssh
          port: 22
